# aewsome-ops

./: .gitignore  README.md  docusaurus.config.js  mkdocs.yml  package-lock.json  pyproject.toml
docs/: index.md
docs/kubernetes/: create.md  index.md
docs/microservices/: index.md
docs/toolings/: tools.md
