[tool.poetry]
name = "aewsome-ops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aewsome_ops"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mypy = "^1.0.1"
mkdocs-material = "^9.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
